--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 </div>
             </div>
             <div class="header-track-wrapper">
-                <div class="header-track-btns"><a href="#" class="header-track-btn w-button">PREV</a>
-                    <div class="header-track-btns-split"></div><a href="#" class="header-track-btn w-button">NEXT</a>
+                <div class="header-track-btns"><a href="#" class="header-track-btn w-button" id="headerPrev">PREV</a>
+                    <div class="header-track-btns-split"></div><a href="#" class="header-track-btn w-button" id="headerNext">NEXT</a>
                 </div>
                 <div class="header-track">
                     <div data-w-id="5aef5c5d-b75c-858e-a17c-3cccb3362cf0" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="header-trakc_item">
@@ -227,6 +227,6 @@
     <script src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/js/webflow.schunk.4a394eb5af8156f2.js" type="text/javascript"></script>
     <script src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/js/webflow.schunk.d9d34cba4dc93b5c.js" type="text/javascript"></script>
     <script src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/js/webflow.2704b74c.c5c6dacd25b0bc0d.js" type="text/javascript"></script><a class="w-webflow-badge" href="https://webflow.com?utm_campaign=brandjs"><img src="https://d3e54v103j8qbb.cloudfront.net/img/webflow-badge-icon-d2.89e12c322e.svg" alt="" style="margin-right: 4px; width: 26px;"><img src="https://d3e54v103j8qbb.cloudfront.net/img/webflow-badge-text-d2.c82cec3b78.svg" alt="Made in Webflow"></a>
-
+    <script src="./js/script.js"></script>
 
 </body></html>
