--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
                 <div class="header-track">
                     <div data-w-id="5aef5c5d-b75c-858e-a17c-3cccb3362cf0" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="header-trakc_item">
                         <h2 class="heading-track_item-num heading-track_item-num_active">01</h2>
-                        <p class="heading-track_item-text">House in Ankara</p><a href="#" class="header-track-item-link w-inline-block"></a>
+                        <p class="heading-track_item-text">House in Ankara</p><a role="button" onclick="setId(1)" class="header-track-item-link w-inline-block"></a>
                     </div>
                     <div data-w-id="46465a69-3bc2-f0d6-5f3c-7db032d61dbe" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;" class="header-trakc_item">
                         <h2 class="heading-track_item-num">02</h2>
-                        <p class="heading-track_item-text">Seaside Horizon Villa</p><a href="#" class="header-track-item-link w-inline-block"></a>
+                        <p class="heading-track_item-text">Seaside Horizon Villa</p><a role="button" onclick="setId(2)" class="header-track-item-link w-inline-block"></a>
                     </div>
                     <div data-w-id="cda258a1-bd43-dcd5-6b8a-f82f633cdf86" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="header-trakc_item">
                         <h2 class="heading-track_item-num">03</h2>
-                        <p class="heading-track_item-text">Forest<br>Haven<br>Retreat</p><a href="#" class="header-track-item-link w-inline-block"></a>
+                        <p class="heading-track_item-text">Forest<br>Haven<br>Retreat</p><a role="button" onclick="setId(3)" class="header-track-item-link w-inline-block"></a>
                     </div>
                 </div>
             </div>
@@ -227,6 +227,7 @@
     <script src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/js/webflow.schunk.4a394eb5af8156f2.js" type="text/javascript"></script>
     <script src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/js/webflow.schunk.d9d34cba4dc93b5c.js" type="text/javascript"></script>
     <script src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/js/webflow.2704b74c.c5c6dacd25b0bc0d.js" type="text/javascript"></script><a class="w-webflow-badge" href="https://webflow.com?utm_campaign=brandjs"><img src="https://d3e54v103j8qbb.cloudfront.net/img/webflow-badge-icon-d2.89e12c322e.svg" alt="" style="margin-right: 4px; width: 26px;"><img src="https://d3e54v103j8qbb.cloudfront.net/img/webflow-badge-text-d2.c82cec3b78.svg" alt="Made in Webflow"></a>
+    <script src="./js/projects.js"></script>
     <script src="./js/script.js"></script>
 
 </body></html>
