images fixes and auto scroll

--- a/index.html
+++ b/index.html
@@ -66,9 +66,15 @@
         <div class="header-wrapper" data-w-id="f14c71b9-2c1a-260c-21df-3c916ac05590">
             <!-- Slika kao img tag sa potrebnim Webflow atributima -->
             <img src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/67d2f7f98493a0ba9a591fc2_flag-6913477_1920.jpg"
-                alt="Background Image" class="header-background-image"
+                alt="Background Image" class="header-background-image" id="headerBackgroundImage"
                 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;">
 
+            <img src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/67e9274398c376b972765d4e_log.webp" alt="Background Image 2" class="header-background-image" id="headerBackgroundImage2"
+                style="opacity: 0;">
+
+            <!-- Slika 3 -->
+            <img src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/67e927432e113f5398758f23_int1.webp" alt="Background Image 3" class="header-background-image" id="headerBackgroundImage3"
+                style="opacity: 0;">
             <div class="header-container">
                 <div class="header-content-wrapper">
                     <p class="desc desc-light">ARCHITECTURE</p>
@@ -86,7 +92,7 @@
                                 class="heading-xlarge heading-white heading-text">Ankara</h1>
                         </div>
                     </div>
-                    <a href="/larson/projects" class="small-text header-link">See project &gt;</a>
+                    <a href="/larson/projects/house-in-ankara" id="headerSeeProject" class="small-text header-link">See project &gt;</a>
                     <div class="header-content-yellow-outline"></div>
                 </div>
             </div>
@@ -105,12 +111,12 @@
                     </div>
                     <div data-w-id="46465a69-3bc2-f0d6-5f3c-7db032d61dbe" class="header-trakc_item">
                         <h2 class="heading-track_item-num">02</h2>
-                        <p class="heading-track_item-text">Seaside Horizon Villa</p>
+                        <p class="heading-track_item-text">Mountain<br>Crest<br>Lodge</p>
                         <a role="button" onclick="setId(2)" class="header-track-item-link w-inline-block"></a>
                     </div>
                     <div data-w-id="cda258a1-bd43-dcd5-6b8a-f82f633cdf86" class="header-trakc_item">
                         <h2 class="heading-track_item-num">03</h2>
-                        <p class="heading-track_item-text">Forest<br>Haven<br>Retreat</p>
+                        <p class="heading-track_item-text">Modern<br>Urban<br>Loft</p>
                         <a role="button" onclick="setId(3)" class="header-track-item-link w-inline-block"></a>
                     </div>
                 </div>
