counter on mobile fix

--- a/index.html
+++ b/index.html
@@ -69,11 +69,13 @@
                 alt="Background Image" class="header-background-image" id="headerBackgroundImage"
                 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;">
 
-            <img src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/67e9274398c376b972765d4e_log.webp" alt="Background Image 2" class="header-background-image" id="headerBackgroundImage2"
+            <img src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/67e9274398c376b972765d4e_log.webp"
+                alt="Background Image 2" class="header-background-image" id="headerBackgroundImage2"
                 style="opacity: 0;">
 
             <!-- Slika 3 -->
-            <img src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/67e927432e113f5398758f23_int1.webp" alt="Background Image 3" class="header-background-image" id="headerBackgroundImage3"
+            <img src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/67e927432e113f5398758f23_int1.webp"
+                alt="Background Image 3" class="header-background-image" id="headerBackgroundImage3"
                 style="opacity: 0;">
             <div class="header-container">
                 <div class="header-content-wrapper">
@@ -92,7 +94,8 @@
                                 class="heading-xlarge heading-white heading-text">Ankara</h1>
                         </div>
                     </div>
-                    <a href="/larson/projects/house-in-ankara" id="headerSeeProject" class="small-text header-link">See project &gt;</a>
+                    <a href="/larson/projects/house-in-ankara" id="headerSeeProject" class="small-text header-link">See
+                        project &gt;</a>
                     <div class="header-content-yellow-outline"></div>
                 </div>
             </div>
@@ -195,10 +198,10 @@
                 <div class="latest-project-filter-wrapper"><a role="button" id="filterAll"
                         class="latest-projects-filter-link link-active">All</a><a role="button" id="filterBuilding"
                         class="latest-projects-filter-link">Building</a>
-                    <role="button" id="filterInterior" class="latest-projects-filter-link">Interior</a><a
-                            href="/larson/projects"
-                            class="latest-projects-filter-link latest-projects-filter-link-gray"><em>View all
-                                projects</em></a>
+                    <a role="button" id="filterInterior" class="latest-projects-filter-link">Interior</a>
+                    <a href="/larson/projects"
+                        class="latest-projects-filter-link latest-projects-filter-link-gray"><em>View all
+                            projects</em></a>
                 </div>
             </div>
         </div>
