--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
             <div class="w-nav-overlay" data-wf-ignore="" id="w-nav-overlay-0"></div>
         </div>
         <div class="header-wrapper" data-w-id="f14c71b9-2c1a-260c-21df-3c916ac05590">
-            <!-- Slika kao img tag sa potrebnim Webflow atributima -->
             <img src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/67d2f7f98493a0ba9a591fc2_flag-6913477_1920.jpg"
                 alt="Background Image" class="header-background-image" id="headerBackgroundImage"
                 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;">
@@ -111,17 +110,17 @@
                     <div data-w-id="5aef5c5d-b75c-858e-a17c-3cccb3362cf0" class="header-trakc_item">
                         <h2 class="heading-track_item-num heading-track_item-num_active">01</h2>
                         <p class="heading-track_item-text">House in Ankara</p>
-                        <a role="button" onclick="setId(1)" class="header-track-item-link w-inline-block" aria-command-name="house in ankara"></a>
+                        <a role="button" onclick="setId(1)" class="header-track-item-link w-inline-block" aria-label="house in ankara"></a>
                     </div>
                     <div data-w-id="46465a69-3bc2-f0d6-5f3c-7db032d61dbe" class="header-trakc_item">
                         <h2 class="heading-track_item-num">02</h2>
                         <p class="heading-track_item-text">Mountain<br>Crest<br>Lodge</p>
-                        <a role="button" onclick="setId(2)" class="header-track-item-link w-inline-block" aria-command-name="mountain crest lodge"></a>
+                        <a role="button" onclick="setId(2)" class="header-track-item-link w-inline-block" aria-label="mountain crest lodge"></a>
                     </div>
                     <div data-w-id="cda258a1-bd43-dcd5-6b8a-f82f633cdf86" class="header-trakc_item">
                         <h2 class="heading-track_item-num">03</h2>
                         <p class="heading-track_item-text">Modern<br>Urban<br>Loft</p>
-                        <a role="button" onclick="setId(3)" class="header-track-item-link w-inline-block" aria-command-name="modern urban loft"></a>
+                        <a role="button" onclick="setId(3)" class="header-track-item-link w-inline-block" aria-label="modern urban loft"></a>
                     </div>
                 </div>
             </div>
