--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
 </head>
 
 <body>
-    <div class="loader"><img
-            src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/67c5eb597fac3c6ac637a4c3_Logo2.svg"
-            loading="lazy" alt="Larson Logo" class="loader-logo"></div>
     <section class="header">
         <div data-w-id="5c9cce11-e2b6-454f-5b87-bb0a33497afb" data-animation="default" data-collapse="medium"
             data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="nav w-nav"
@@ -65,16 +62,16 @@
             <div class="w-nav-overlay" data-wf-ignore="" id="w-nav-overlay-0"></div>
         </div>
         <div class="header-wrapper" data-w-id="f14c71b9-2c1a-260c-21df-3c916ac05590">
-            <img src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/67d2f7f98493a0ba9a591fc2_flag-6913477_1920.jpg"
+            <img src="./assets/homeDesktop1.webp"
                 alt="Background Image" class="header-background-image" id="headerBackgroundImage"
                 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;">
 
-            <img src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/67e9274398c376b972765d4e_log.webp"
+            <img src="./assets/homeDesktop2.webp"
                 alt="Background Image 2" class="header-background-image" id="headerBackgroundImage2"
                 style="opacity: 0;">
 
             <!-- Slika 3 -->
-            <img src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/67e927432e113f5398758f23_int1.webp"
+            <img src="./assets/homeDesktop3.webp"
                 alt="Background Image 3" class="header-background-image" id="headerBackgroundImage3"
                 style="opacity: 0;">
             <div class="header-container">
