--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="header-wrapper" data-w-id="f14c71b9-2c1a-260c-21df-3c916ac05590">
             <img src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/67d2f7f98493a0ba9a591fc2_flag-6913477_1920.jpg"
-                alt="Background Image" class="header-background-image" id="headerBackgroundImage"
+                alt="Background Image" class="header-background-image" id="headerBackgroundImage1"
                 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;">
 
             <img src="https://cdn.prod.website-files.com/67c2dfa05fe50e95ef04d174/67e9274398c376b972765d4e_log.webp"
